--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -1,5 +1,5 @@
 <material-content layout="vertical" layout-fill>
-    <material-toolbar scroll-shrink class="home-header"  style="background-image: url({{ challenge.banner || 'http://placehold.it/900x150'  }}) !important;position:relative;" >
+    <material-toolbar scroll-shrink class="home-header">
         <div layout="vertical" class="content">
             <h1>
                 {{ challenge.title }}
@@ -8,10 +8,13 @@
         </div>
     </material-toolbar>
 
+    <img ng-if="challenge.banner" src="{{ challenge.banner }}">
+
     <div layout="vertical">
         <material-button ui-sref="challengeAdmin({ cid : challenge._id })" ng-if="isOwner">
             <i class="fa fa-pencil-square-o baseColor"></i> Edit
         </material-button>
+
         <div layout="horizontal">
             <div>
                 <span>
