--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -8,7 +8,7 @@
         </div>
     </material-toolbar>
 
-    <img ng-if="challenge.banner" src="{{ challenge.banner }}">
+    <img ng-if="challenge.banner" src="{{ challenge.banner }}" style="margin: auto;">
 
     <div layout="vertical">
         <material-button ui-sref="challengeAdmin({ cid : challenge._id })" ng-if="isOwner">
