--- a/client/app/modules/header/templates/searchBar.tpl.html
+++ b/client/app/modules/header/templates/searchBar.tpl.html
@@ -11,7 +11,7 @@
         <material-divider ng-if="result.separator" style="text-align: center;" ng-class="{ 'material-theme-green' : result.separator == 'Users', 'material-theme-indigo' : result.separator == 'Challenges', 'material-theme-light' : result.separator == 'Projects' }">{{ result.separator }}</material-divider>
         <material-item ng-if="!result.separator" class="result-item" ng-click="goTo(result)">
             <material-item-content>
-                <div class="material-tile-left" ng-click="goTo(result)">
+                <div class="material-tile-left">
                     <img ng-src="{{result.poster || 'http://placehold.it/50x50'}}" class="img-rounded" style="height:50px;max-width: 100%">
                 </div>
                 <div class="material-tile-content">
