--- a/client/app/modules/tag/templates/tag.tpl.html
+++ b/client/app/modules/tag/templates/tag.tpl.html
@@ -1,11 +1,17 @@
 <material-content layout="vertical" layout-fill>
-    <tabset>
+    <div ng-if="isLoading">
+        Loading...
+        <material-linear-progress mode="indeterminate"></material-linear-progress>
+    </div>
+
+    <tabset ng-if="!isLoading">
         <tab heading="List">
             <!-- list users-->
             <h3 class="solid pbm">{{ 'TAG_USER' | translate }}</h3>
             <div ng-hide="tagData.users">
                 <div class="alert alert-info">{{ 'TAG_NOT_MATCH' | translate }}</div>
             </div>
+            <div ng-show="tagData.users.length == 0">No users</div>
             <div ng-show="tagData.users">
                 <ul class="list-unstyled">
                     <li ng-repeat="user in tagData.users" >
@@ -19,7 +25,6 @@
                                     <div class="text-muted" ng-bind-html="user.brief" collapse="isCollapsed" ></div>
                                 </blockquote>
                             </div>
-                            <!--<div owner-block='user.id' class="inline"></div><span class="pts mlm"><b>{{user.username}}</b></span>-->
                         </div>
                     </li>
                 </ul>
@@ -30,6 +35,7 @@
             <div ng-hide="tagData.challenges">
                 <div class="alert alert-info">{{ 'TAG_NOT_MATCH' | translate }}</div>
             </div>
+            <div ng-show="tagData.challenges.length == 0">No challenges</div>
             <div ng-show="tagData.challenges">
                 <ul class="list-unstyled">
                     <li ng-repeat="challenge in tagData.challenges">
@@ -56,6 +62,7 @@
                     {{ 'TAG_NOT_MATCH' | translate }}
                 </div>
             </div>
+            <div ng-show="tagData.projects.length == 0">No projects</div>
             <div ng-show="tagData.projects">
                 <ul class="list-unstyled">
                     <li ng-repeat="project in tagData.projects">
