--- a/client/app/modules/home/sass/home.scss
+++ b/client/app/modules/home/sass/home.scss
@@ -2,8 +2,8 @@
   height: 100%!important;
 }
 
-#carousel-1{
-  height: 100%!important;
+#homeCarousel {
+  height: 450px;
 }
 
 .carousel-home{
@@ -51,10 +51,10 @@ material-dialog {
   color: #DDD;
 }
 
-.my-carousel h1 {
+#homeCarousel h1 {
   margin: 0 140px 0 140px;
 }
 
-.my-carousel a {
+#homeCarousel a {
   color: white;
 }
