--- a/client/app/modules/project/templates/projects-list.tpl.html
+++ b/client/app/modules/project/templates/projects-list.tpl.html
@@ -3,12 +3,14 @@
         <material-item ng-repeat="project in projects" class="item-list">
             <material-item-content>
                 <div class="material-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
-                    <img ng-src="{{ project.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="project's poster" />
+                    <a ui-sref="project.home({ pid : project.accessUrl })">
+                        <img ng-src="{{ project.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="project's poster" />
+                    </a>
                 </div>
                 <article class="material-tile-content">
-                    <h1 ui-sref="project.home({ pid : project.accessUrl })">
-                        {{ project.title }}
-                    </h1>
+                    <a ui-sref="project.home({ pid : project.accessUrl })">
+                        <h1>{{ project.title }}</h1>
+                    </a>
                     <showtags entity="project"></showtags>
                     <div hide block-md>
                         <p ng-bind-html="project.brief">
