--- a/client/app/modules/home/templates/home.tpl.html
+++ b/client/app/modules/home/templates/home.tpl.html
@@ -1,5 +1,5 @@
 <material-content style="overflow-x:hidden;" class="my-carousel">
-    <ul rn-carousel rn-carousel-controls rn-carousel-auto-slide="5" class="my-carousel">
+    <ul rn-carousel rn-carousel-controls rn-carousel-auto-slide="5" id="homeCarousel">
         <li class="my-carousel" ng-repeat="challenge in challenges" >
             <section class="carousel-home center my-carousel" ng-if="challenge.intro == 1">
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo"/>
@@ -13,7 +13,6 @@
                     <material-button ng-click="toSignUp()"  class="material-button-raised material-button-colored">GET INVOLVED</material-button>
                 </div>
             </section>
-                <!--<d3-tag-cloud hide block-md  tags="tags" on-click="showTag(item)" options="{ width : 900,height : 300,center : true}" ></d3-tag-cloud>-->
             <section class="my-carousel carousel-home  center" ng-if="challenge.intro == 2" >
                 <img src="images/svg/logocaroussel.svg" alt="ideaWeaveLogo"/>
                 <h1>
@@ -32,8 +31,6 @@
                     <img ng-if="challenge.banner" src="{{ challenge.banner }}" ui-sref="challenge({cid : challenge.accessUrl})">
                 </a>
                 <showtags entity="challenge"></showtags>
-                <p class="carousel-brief" ng-bind-html="challenge.home">
-                </p>
 
                 <div layout="horizontal" layout-align="center center">
                     <material-button ui-sref="challenge({cid : challenge.accessUrl})" class="material-button-raised material-button-colored">Take a look</material-button>
