Improved related projects view

--- a/client/app/modules/common/sass/common.scss
+++ b/client/app/modules/common/sass/common.scss
@@ -77,3 +77,7 @@ section > material-toolbar > div {
   font-size: 32pt;
   font-weight: 600;
 }
+
+material-item .material-tile-left {
+  margin: 0px;
+}
