--- a/client/app/modules/challenge/templates/modal/listProjects.tpl.html
+++ b/client/app/modules/challenge/templates/modal/listProjects.tpl.html
@@ -1,9 +1,9 @@
 <material-dialog>
     <material-toolbar>
         <div class="material-toolbar-tools">
-            <material-button flex>
+            <h1 flex>
                 {{ challenge.title }}
-            </material-button>
+            </h1>
             <material-button class="material-button-fab" ng-click="cancel()">
                 <i class="fa fa-times"></i>
             </material-button>
@@ -14,23 +14,23 @@
             <material-item ng-repeat="project in projects">
                 <material-item-content>
                     <div class="material-tile-left">
-                        <img ng-src="{{ project.poster || 'http://placehold.it/100x100' }}" alt="{{ project.title }}'s poster" class="img-rounded" width="100px" height="100px"/>
+                        <a ui-sref="project.home({ pid : project.accessUrl })" ng-click="cancel()">
+                            <img ng-src="{{ project.poster || 'http://placehold.it/100x100' }}" alt="{{ project.title }}'s poster" class="img-rounded" width="100px" height="100px"/>
+                        </a>
                     </div>
                     <div class="material-tile-content">
                         <div>
-                            {{ project.title }}
+                            <a ui-sref="project.home({ pid : project.accessUrl })" ng-click="cancel()">
+                                {{ project.title }}
+                            </a>
                         </div>
                         <div>
                             {{ project.brief }}
                         </div>
-                    </div>
-                    <div class="material-tile-right">
-                        {{ project.noteNumber }}
-                        &nbsp;publication
+                        </a>
                     </div>
                 </material-item-content>
             </material-item>
         </material-list>
-        <!--<project-block my-project="project" ng-repeat="project in projects" width="'100px'" height="'100px'"></project-block>-->
     </material-content>
 </material-dialog>
