Moved links to project pge to project home page

--- a/client/app/modules/notification/templates/include/challenge-notif.tpl.html
+++ b/client/app/modules/notification/templates/include/challenge-notif.tpl.html
@@ -4,7 +4,7 @@
     </div>
     <div class="material-tile-content" layout="horizontal" layout-align="center center">
         <span>
-            created a new Challenge
+            Created a new challenge
         </span>
         <challenge-info challenge-id="notif.entity"></challenge-info>
     </div>
