show project brief

--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -5,6 +5,7 @@
                 {{ project.title }}
                 <i class="fa fa-star" style="color:yellow;" ng-if="isFollow"></i>
             </h1>
+            <h3>{{ project.brief }}</h3>
             <div class="material-toolbar-tools" layout="horizontal">
                 <div flex></div>
                 <div>
