Challenge and project notifications work

--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -21,7 +21,7 @@
             <material-button ng-click="popUpBanner()">
                 Edit Banner
             </material-button>
-            <material-button class="material-theme-red" ng-click="remove()">
+            <material-button class="material-theme-red" ng-click="popUpRemove()">
                 Delete
             </material-button>
         </material-content>
