--- a/client/app/modules/notification/templates/include/project-notif.tpl.html
+++ b/client/app/modules/notification/templates/include/project-notif.tpl.html
@@ -6,7 +6,7 @@
             <span>
                 created a new Project
             </span>
-        <project-info my-project="notif.entity"></project-info>
+        <project-info project-id="notif.entity"></project-info>
             <span>
                 on the challenge
             </span>
