--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -54,6 +54,19 @@
                 </material-button>
             </div>
         </section>
+
+        <section>
+            <h2>Publications</h2>
+            <article ng-repeat="note in challenge.notes">
+                <p>{{ note.text }}</p>
+
+                <h3>Comments</h3>
+                <article ng-repeat="comment in note.comments">
+                    <p>{{ comment.text }}
+                </article>
+            </article>
+        </section>
+        
         <section >
             <project-card inline-block project-id="project" ng-repeat="project in challenge.projects"></project-card>
         </section>
