--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -58,15 +58,22 @@
         <section>
             <h2>Publications</h2>
             <article ng-repeat="note in challenge.notes">
-                <p>{{ note.text }}</p>
+                <p>Posted by {{ note.owner.username }} on {{ note.createDate | date : medium }}</p>
+                <p ng-bind-html="note.text"></p>
 
                 <h3>Comments</h3>
                 <article ng-repeat="comment in note.comments">
-                    <p>{{ comment.text }}
+                    <p>Posted by {{ note.owner.username }} on {{ note.createDate | date : medium }}</p>
+                    <p ng-bind-html="comment.text"></p>
                 </article>
+
+                <form name="commentForm" ng-submit="postComment(note)">
+                    <textarea name="comment" class="pretty-area" rows="2" required ng-model="note.newComment" placeholder="Your comment here ..."></textarea>
+                    <material-button type="submit" ng-disabled="commentForm.$invalid" style="width:100%;">Send</material-button>
+                </form>            
             </article>
         </section>
-        
+
         <section >
             <project-card inline-block project-id="project" ng-repeat="project in challenge.projects"></project-card>
         </section>
