Switched placehold.it to client-side placeholders

--- a/client/app/modules/challenge/templates/modal/listProjects.tpl.html
+++ b/client/app/modules/challenge/templates/modal/listProjects.tpl.html
@@ -15,7 +15,7 @@
                 <material-item-content>
                     <div class="material-tile-left">
                         <a ui-sref="project.home({ pid : project.accessUrl })" ng-click="cancel()">
-                            <img ng-src="{{ project.poster || 'http://placehold.it/100x100' }}" alt="{{ project.title }}'s poster" class="img-rounded" width="100px" height="100px"/>
+                            <img ng-src="{{ project.poster || '/images/placeholder100x100.png' }}" alt="{{ project.title }}'s poster" class="img-rounded" width="100px" height="100px"/>
                         </a>
                     </div>
                     <div class="material-tile-content">
