--- a/client/app/modules/header/templates/searchBar.tpl.html
+++ b/client/app/modules/header/templates/searchBar.tpl.html
@@ -12,7 +12,7 @@
         <material-item ng-if="!result.separator" class="result-item" ng-click="goTo(result)">
             <material-item-content>
                 <div class="material-tile-left">
-                    <img ng-src="{{result.poster || 'http://placehold.it/50x50'}}" class="img-rounded" style="height:50px;max-width: 100%">
+                    <img ng-src="{{result.poster || '/images/placeholder50x50.png'}}" class="img-rounded" style="height:50px;max-width: 100%">
                 </div>
                 <div class="material-tile-content">
                     <div>
