--- a/client/app/modules/project/templates/projects-list.tpl.html
+++ b/client/app/modules/project/templates/projects-list.tpl.html
@@ -4,7 +4,7 @@
             <material-item-content>
                 <div class="material-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
                     <a ui-sref="project.home({ pid : project.accessUrl })">
-                        <img ng-src="{{ project.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="project's poster" />
+                        <img ng-src="{{ project.poster || '/images/placeholder90x90.png' }}" class="" width="100%" alt="project's poster" />
                     </a>
                 </div>
                 <article class="material-tile-content">
