--- a/client/app/modules/challenge/templates/challenges-list.tpl.html
+++ b/client/app/modules/challenge/templates/challenges-list.tpl.html
@@ -7,7 +7,7 @@
             <material-item-content>
                 <div class="material-tile-left" flex="40" flex-sm="30" flex-md="25" flex-lg="15">
                     <a ui-sref="challenge({ cid : challenge.accessUrl })">
-                        <img ng-src="{{ challenge.poster || 'http://placehold.it/90x90' }}" class="" width="100%" alt="challenge's poster" />
+                        <img ng-src="{{ challenge.poster || '/images/placeholder90x90.png' }}" class="" width="100%" alt="challenge's poster" />
                     </a>
                 </div>
                 <article class="material-tile-content">
