--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -1,4 +1,4 @@
-<section style="background-color:rgb(240,241,241);" layout="vertical">
+<section layout="vertical">
     <section flex>
         <div ng-bind-html="project.home">
         </div>
@@ -9,4 +9,6 @@
             <material-button class="material-button-colored" ng-click="openShare()">Promote Project</material-button>
         </div>
     </div>
+
+    <list-notes project="project" current-user="currentUser"></list-notes>
 </section>
