--- a/client/app/modules/workspace/templates/resources.tpl.html
+++ b/client/app/modules/workspace/templates/resources.tpl.html
@@ -14,18 +14,19 @@
     </div>
 
     <material-list class="list-resource">
-        <material-item ng-repeat="url in urls |filter:urlFilter">
+        <material-item ng-repeat="url in urls | filter:urlFilter">
             <div class="material-tile-content" layout="vertical" layout-align="start center">
-                <material-button ng-href="{{ url.text }}" target="_blank" style="width:100%;">
-                        {{ url.title }}
-                </material-button>
                 <p>
-                  {{ url.description }}
+                    <a ng-href="{{ url.text }}" target="_blank" class="url">{{ url.title }}</a>
+                    <material-button ng-click="removeUrl(url)"><i class="fa fa-times"></i></material-button>
+                </p>
+                <p>
+                    {{ url.description }}
                 </p>
             </div>
-            <div class="material-tile-right">
+            <!-- <div class="material-tile-right">
                 <user-block userId="url.owner" height="50px"></user-block>
-            </div>
+            </div> --> 
         </material-item>
     </material-list>
 </section>
