Default workspace tabs working

--- a/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
@@ -19,7 +19,7 @@
                 <material-input type="text" id="title" ng-model="url.title" required style="width:100%;"/>
             </material-input-group>
             <material-input-group>
-                <label for="url">url (http://...)</label>
+                <label for="url">URL (http://...)</label>
                 <material-input type="url" id="url" ng-model="url.text" required />
             </material-input-group>
             <material-input-group>
