--- a/client/app/modules/workspace/templates/resources.tpl.html
+++ b/client/app/modules/workspace/templates/resources.tpl.html
@@ -2,7 +2,7 @@
     <div layout="horizontal" layout-align="start center">
         <material-button ng-click="addResourceModal($event)" flex>
             <span>
-                Add a resource
+                Add a link
             </span>
             <i class="material-button-icon fa fa-plus fa-2x"></i>
         </material-button>
