Removing files works

--- a/client/app/modules/workspace/templates/files.tpl.html
+++ b/client/app/modules/workspace/templates/files.tpl.html
@@ -14,7 +14,7 @@
         </div>
         <div class="material-tile-content">
             <material-button ng-click="detailsFileModal($event,file)" style="height: 100%;width:100%;">
-                {{ file.originalname }}
+                {{ file.originalName }}
             </material-button>
         </div>
         <div class="material-tile-right">
