fixed file upload styling

--- a/client/app/modules/workspace/templates/files.tpl.html
+++ b/client/app/modules/workspace/templates/files.tpl.html
@@ -4,21 +4,16 @@
     </material-button>
     <material-input-group >
         <label for="filter" class="fa fa-search">Filter by name</label>
-        <material-input type="text" ng-model="fileFilter.originalname" id="filter"/>
+        <material-input type="text" ng-model="fileFilter.originalName" id="filter"/>
     </material-input-group>
 </material-toolbar>
 <material-list class="list-resource">
     <material-item ng-repeat="file in files | filter:fileFilter">
-        <div class="material-tile-left">
-            <i class="fa {{ file.class }} fa-2x icon-file" ng-class="{ 'file-selected' : file.id == fileDetails.id  }" ng-click="showFileDetails(file)" ></i>
-        </div>
         <div class="material-tile-content">
-            <material-button ng-click="detailsFileModal($event,file)" style="height: 100%;width:100%;">
+            <i class="fa {{ file.class }} fa-2x icon-file" ng-class="{ 'file-selected' : file.id == fileDetails.id  }" ng-click="showFileDetails(file)" ></i>
+            <material-button ng-click="detailsFileModal($event,file)">
                 {{ file.originalName }}
             </material-button>
-        </div>
-        <div class="material-tile-right">
-            <user-block user-id="file.owner" height="'50px'" width="'50px'"></user-block>
         </div>
     </material-item>
 </material-list>
