--- a/client/app/modules/workspace/templates/hackpad.tpl.html
+++ b/client/app/modules/workspace/templates/hackpad.tpl.html
@@ -1,10 +1,1 @@
-
-<material-toolbar >
-    <div layout="horizontal">
-        <div flex></div>
-        <material-button class="material-theme-green material-button-fab" ng-click="exportHackPad()">
-            <i class="fa fa-save"></i>
-        </material-button>
-    </div>
-</material-toolbar>
-<Hackpad curent-user="currentUser" pad-id="myNote.hackPadId"></Hackpad>
+<hackpad current-user="currentUser" pad-id="padId"></hackpad>
