fixed project updating

--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -47,7 +47,7 @@
         <label for="brief"></label>
         <textarea  id="brief" rows="5" style="width:100%;" ng-model="project.brief"></textarea>
         <material-input-group >
-            <label for="trello">Trello Id</label>
+            <label for="trello">Trello Id (like <code>U0aBsIQl</code>)</label>
             <material-input id="trello" type="text"ng-model="project.trello" />
         </material-input-group>
         <material-button flex class="material-button-raised material-button-colored" type="button" ng-click="updateProject($event)" ng-disabled="">Update</material-button>
