Fixed trello embedding

--- a/client/app/modules/project/templates/project.tpl.html
+++ b/client/app/modules/project/templates/project.tpl.html
@@ -41,6 +41,6 @@
         <section >
             <showtags entity="project"></showtags>
         </section>
-        <section ui-view="projectView"></section>
+        <section flex ui-view="projectView"></section>
     </material-content>
 </material-content>
