WIP: adding new ideas

--- a/client/app/modules/challenge/templates/challenges.tpl.html
+++ b/client/app/modules/challenge/templates/challenges.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" style="width:100%;">
+<section layout="vertical" layout-fill>
     <material-toolbar scroll-shrink class="material-theme-indigo" layout="vertical" style="position:relative;z-index:10;">
         <div class="center">
             Challenges 
