--- a/client/app/modules/project/templates/projects.tpl.html
+++ b/client/app/modules/project/templates/projects.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" style="width:100%;">
+<section layout="vertical" layout-fill>
     <material-toolbar scroll-shrink class="material-theme-light" layout="vertical" style="position:relative;z-index:10;">
         <div class="center">
             Projects
